--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ div.sk-chase {
       </div>
       <a href="#user"><img class="circle" src="background3.jpg"></a>
       <a href="#name"><span class="white-text name">Akshit Shubham</span></a>
-      <a href="#email"><span class="white-text email">neontechrealak@gmail.com</span></a>
+      <a href="mailto:neontechrealak@gmail.com?body=HI%20liked%20your%20website"><span class="white-text email">neontechrealak@gmail.com</span></a>
     </div></li>
     <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
     <li><a href="#!">Second Link</a></li>
