--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ body, html {
 	<!-- loading script -->
 <script>
         $(window).on("load",function(){
-          $(".sk-chase").fadeOut("slow");
+          $(".wrapper").fadeOut("slow");
         });
     </script>
 <!-- SIDE MENU -->
