--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@ body, html {
         $(window).on("load",function(){
           $(".wrapper").fadeOut("slow");
         });
+	 $(window).on("load",function(){
+          $(".neon").fadeOut("slow");
+        });
     </script>
 <!-- SIDE MENU -->
   <ul id="slide-out" class="sidenav">
