--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body, html {
   <div class="neon">
 
     <svg version="1.1" id="BG" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 954 242" style="enable-background:new 0 0 934 242;" xml:space="preserve">
+       viewBox="0 0 954 242" style="enable-background:new 0 0 934 242;" xml:space="preserve" class="neon2">
       <style type="text/css">
         .st0{fill:#29ABE2;}
         .st1{fill:none;stroke:#FF00DB;stroke-width:3;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,25,175;}
@@ -223,6 +223,9 @@ body, html {
 	 $(window).on("load",function(){
           $(".neon").fadeOut("slow");
         });
+	 $(window).on("load",function(){
+          $(".neon2").fadeOut("slow");
+        });
     </script>
 
 <!-- LOREM IPSUM -->
@@ -238,18 +241,7 @@ body, html {
 <p>Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</p>
 </div>
 
-<!-- CARD 1 -->
-  <div class="row">
-    <div class="col s12 "> 
-	<!-- /ad m5 for small/ -->
-      <div class="card-panel teal">
-        <span class="white-text">
-			NEON TECH is a youtube startup giving you knowledge from simple how to's to advanced coding
-			firing bullets in game to making mansions in minecraft
-        </span>
-      </div>
-    </div>
-  </div>
+
  
 
 
