--- a/index.html
+++ b/index.html
@@ -170,6 +170,16 @@ div.sk-chase {
 
 <!-- LOREM IPSUM -->
  <div class="center2" style="text-align:center;">
+ <p >Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+<p>Aenean commodo ligula eget dolor.</p>
+<p>Aenean massa.</p>
+<p>Integer tincidunt.</p>
+ <p>Cras dapibus.</p>
+<p>Vivamus elementum semper nisi.</p>
+<p>Aenean vulputate eleifend tellus.</p>
+<p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+<p>Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</p>
+</div>
   
  
   <!--  Scripts-->
