--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title> 404 page</title>
+  <style>
   body {
   background-color: #95c2de;
 }
@@ -59,6 +60,7 @@ a {
 a:hover {
   text-decoration: underline;
 }
+<style>
 
 </head>
 <body>
