--- a/CODES/index.html
+++ b/CODES/index.html
@@ -25,17 +25,206 @@ body {
 
 <code-block class="language-html line-numbers" data-line="2">
 <pre>
-&lt;div class="card">
-  &lt;h2>Cool.&lt;/h2>
+&lt;!DOCTYPE html&gt;&lt;br /&gt;<br />
+&lt;html lang=&quot;en&quot;&gt;&lt;br /&gt;<br />
+&lt;head&gt;&lt;br /&gt;<br />
+  &lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=UTF-8&quot;/&gt;&lt;br /&gt;<br />
+  &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1&quot;/&gt;&lt;br /&gt;<br />
+  &lt;title&gt;Parallax Template - Materialize&lt;/title&gt;&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+  &lt;!-- CSS  --&gt;&lt;br /&gt;<br />
+  &lt;link href=&quot;https://fonts.googleapis.com/icon?family=Material+Icons&quot; rel=&quot;stylesheet&quot;&gt;&lt;br /&gt;<br />
+  &lt;link href=&quot;css/materialize.css&quot; type=&quot;text/css&quot; rel=&quot;stylesheet&quot; media=&quot;screen,projection&quot;/&gt;&lt;br /&gt;<br />
+  &lt;link href=&quot;css/style.css&quot; type=&quot;text/css&quot; rel=&quot;stylesheet&quot; media=&quot;screen,projection&quot;/&gt;&lt;br /&gt;<br />
+  &lt;link href=&quot;https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css&quot; rel=&quot;stylesheet&quot;&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;https://tympanus.net/Tutorials/SwatchBook/js/modernizr.custom.79639.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+   &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;link href=&quot;css/&quot; rel=&quot;stylesheet&quot;&gt;&lt;br /&gt;<br />
+  &lt;!-- STYLE --&gt;&lt;br /&gt;<br />
+  <code-block class="language-css line-numbers" data-line="2">
+<pre>
+&lt;style&gt;&lt;br /&gt;<br />
+body{&lt;br /&gt;<br />
+	cursor: url(&quot;&quot;), url(&quot;cursors/Arrow.cur&quot;), default;&lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+a{&lt;br /&gt;<br />
+cursor: url(&quot;&quot;), url(&quot;cursors/Hand.cur&quot;), default;&lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+div.sk-chase {&lt;br /&gt;<br />
+	width: 100px;&lt;br /&gt;<br />
+	height: 100px;&lt;br /&gt;<br />
+	position: absolute;&lt;br /&gt;<br />
+	top:0;&lt;br /&gt;<br />
+	bottom: 0;&lt;br /&gt;<br />
+	left: 0;&lt;br /&gt;<br />
+	right: 0;&lt;br /&gt;<br />
+  	&lt;br /&gt;<br />
+	margin: auto;&lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+.sk-chase {&lt;br /&gt;<br />
+    width: 40px;&lt;br /&gt;<br />
+  height: 40px;&lt;br /&gt;<br />
+  position: relative;&lt;br /&gt;<br />
+  animation: sk-chase 2.5s infinite linear both;&lt;br /&gt;<br />
+  &lt;br /&gt;<br />
+  &lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+.sk-chase-dot {&lt;br /&gt;<br />
+  width: 100%;&lt;br /&gt;<br />
+  height: 100%;&lt;br /&gt;<br />
+  position: absolute;&lt;br /&gt;<br />
+  left: 0;&lt;br /&gt;<br />
+  top: 0; &lt;br /&gt;<br />
+  animation: sk-chase-dot 2.0s infinite ease-in-out both; &lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+.sk-chase-dot:before {&lt;br /&gt;<br />
+  content: '';&lt;br /&gt;<br />
+  display: block;&lt;br /&gt;<br />
+  width: 25%;&lt;br /&gt;<br />
+  height: 25%;&lt;br /&gt;<br />
+  background-color: #0BAE73;&lt;br /&gt;<br />
+  border-radius: 100%;&lt;br /&gt;<br />
+  animation: sk-chase-dot-before 2.0s infinite ease-in-out both; &lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }&lt;br /&gt;<br />
+.sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+@keyframes sk-chase {&lt;br /&gt;<br />
+  100% { transform: rotate(360deg); } &lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+@keyframes sk-chase-dot {&lt;br /&gt;<br />
+  80%, 100% { transform: rotate(360deg); } &lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+@keyframes sk-chase-dot-before {&lt;br /&gt;<br />
+  50% {&lt;br /&gt;<br />
+    transform: scale(0.4); &lt;br /&gt;<br />
+  } 100%, 0% {&lt;br /&gt;<br />
+    transform: scale(1.0); &lt;br /&gt;<br />
+  } &lt;br /&gt;<br />
+}&lt;br /&gt;<br />
+&lt;/style&gt;&lt;br /&gt;<br />
+</pre>
+&lt;/head&gt;&lt;br /&gt;<br />
+&lt;body class=&quot;teal lighten-5 ;&quot;&gt;	&lt;br /&gt;<br />
+&lt;!-- loading --&gt;&lt;br /&gt;<br />
+&lt;div class=&quot;sk-chase&quot;&gt;&lt;br /&gt;<br />
+  &lt;div class=&quot;sk-chase-dot&quot;&gt;&lt;/div&gt;&lt;br /&gt;<br />
+  &lt;div class=&quot;sk-chase-dot&quot;&gt;&lt;/div&gt;&lt;br /&gt;<br />
+  &lt;div class=&quot;sk-chase-dot&quot;&gt;&lt;/div&gt;&lt;br /&gt;<br />
+  &lt;div class=&quot;sk-chase-dot&quot;&gt;&lt;/div&gt;&lt;br /&gt;<br />
+  &lt;div class=&quot;sk-chase-dot&quot;&gt;&lt;/div&gt;&lt;br /&gt;<br />
+  &lt;div class=&quot;sk-chase-dot&quot;&gt;&lt;/div&gt;&lt;br /&gt;<br />
+&lt;/div&gt;&lt;br /&gt;<br />
+	&lt;br /&gt;<br />
+	&lt;!-- loading script --&gt;&lt;br /&gt;<br />
+&lt;script&gt;&lt;br /&gt;<br />
+        $(window).on(&quot;load&quot;,function(){&lt;br /&gt;<br />
+          $(&quot;.sk-chase&quot;).fadeOut(&quot;slow&quot;);&lt;br /&gt;<br />
+        });&lt;br /&gt;<br />
+    &lt;/script&gt;&lt;br /&gt;<br />
+&lt;!-- SIDE MENU --&gt;&lt;br /&gt;<br />
+  &lt;ul id=&quot;slide-out&quot; class=&quot;sidenav&quot;&gt;&lt;br /&gt;<br />
+    &lt;li&gt;&lt;div class=&quot;user-view&quot;&gt;&lt;br /&gt;<br />
+      &lt;div class=&quot;background&quot;&gt;&lt;br /&gt;<br />
+        &lt;img src=&quot;background2.jpg&quot;&gt;&lt;br /&gt;<br />
+      &lt;/div&gt;&lt;br /&gt;<br />
+      &lt;a href=&quot;#user&quot;&gt;&lt;img class=&quot;circle&quot; src=&quot;background3.jpg&quot;&gt;&lt;/a&gt;&lt;br /&gt;<br />
+      &lt;a href=&quot;#name&quot;&gt;&lt;span class=&quot;white-text name&quot;&gt;Akshit Shubham&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;<br />
+      &lt;a href=&quot;#email&quot;&gt;&lt;span class=&quot;white-text email&quot;&gt;neontechrealak@gmail.com&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;<br />
+    &lt;/div&gt;&lt;/li&gt;&lt;br /&gt;<br />
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;&lt;i class=&quot;material-icons&quot;&gt;cloud&lt;/i&gt;First Link With Icon&lt;/a&gt;&lt;/li&gt;&lt;br /&gt;<br />
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Second Link&lt;/a&gt;&lt;/li&gt;&lt;br /&gt;<br />
+    &lt;li&gt;&lt;div class=&quot;divider&quot;&gt;&lt;/div&gt;&lt;/li&gt;&lt;br /&gt;<br />
+    &lt;li&gt;&lt;a class=&quot;subheader&quot;&gt;Subheader&lt;/a&gt;&lt;/li&gt;&lt;br /&gt;<br />
+    &lt;li&gt;&lt;a class=&quot;waves-effect&quot; href=&quot;#!&quot;&gt;Third Link With Waves&lt;/a&gt;&lt;/li&gt;&lt;br /&gt;<br />
+  &lt;/ul&gt;&lt;br /&gt;<br />
+  &lt;a href=&quot;#&quot; data-target=&quot;slide-out&quot; class=&quot;sidenav-trigger&quot;&gt;&lt;br /&gt;<br />
+ &lt;br /&gt;<br />
+&lt;!-- parallax --&gt;&lt;br /&gt;<br />
+  &lt;div id=&quot;index-banner&quot; class=&quot;parallax-container&quot; &gt;&lt;br /&gt;<br />
+  &lt;!-- side menu button--&gt;&lt;br /&gt;<br />
+  &lt;i class=&quot;material-icons&quot; id=&quot;menu&quot;&gt;menu&lt;/i&gt;&lt;/a&gt;&lt;br /&gt;<br />
+    &lt;div class=&quot;section no-pad-bot&quot;&gt;&lt;br /&gt;<br />
+      &lt;div class=&quot;container&quot;&gt;&lt;br /&gt;<br />
+        &lt;br&gt;&lt;br&gt;&lt;br /&gt;<br />
+        &lt;h1 class=&quot;header center teal-text text-lighten-2 &quot;&gt;Neon Tech&lt;/h1&gt;&lt;br /&gt;<br />
+		&lt;br /&gt;<br />
+		&lt;br /&gt;<br />
+        &lt;div class=&quot;row center&quot;&gt;&lt;br /&gt;<br />
+          &lt;h5 class=&quot;header col s12 light&quot;&gt;STABLE REALIBLE REAL&lt;/h5&gt;&lt;br /&gt;<br />
+        &lt;/div&gt;&lt;br /&gt;<br />
+        &lt;div class=&quot;row center&quot;&gt;&lt;br /&gt;<br />
+          &lt;br /&gt;<br />
+        &lt;/div&gt;&lt;br /&gt;<br />
+        &lt;br&gt;&lt;br&gt;&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+      &lt;/div&gt;&lt;br /&gt;<br />
+    &lt;/div&gt;&lt;br /&gt;<br />
+    &lt;div class=&quot;parallax&quot;&gt;&lt;img src=&quot;background1.jpg&quot; alt=&quot;Unsplashed background img 1&quot;&gt;&lt;/div&gt;&lt;br /&gt;<br />
+  &lt;/div&gt;&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+&lt;!-- LOREM IPSUM --&gt;&lt;br /&gt;<br />
+ &lt;div class=&quot;center2&quot; style=&quot;text-align:center;&quot;&gt;&lt;br /&gt;<br />
+ &lt;p &gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;&lt;br /&gt;<br />
+&lt;p&gt;Aenean commodo ligula eget dolor.&lt;/p&gt;&lt;br /&gt;<br />
+&lt;p&gt;Aenean massa.&lt;/p&gt;&lt;br /&gt;<br />
+&lt;p&gt;Integer tincidunt.&lt;/p&gt;&lt;br /&gt;<br />
+ &lt;p&gt;Cras dapibus.&lt;/p&gt;&lt;br /&gt;<br />
+&lt;p&gt;Vivamus elementum semper nisi.&lt;/p&gt;&lt;br /&gt;<br />
+&lt;p&gt;Aenean vulputate eleifend tellus.&lt;/p&gt;&lt;br /&gt;<br />
+&lt;p&gt;Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.&lt;/p&gt;&lt;br /&gt;<br />
+&lt;p&gt;Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.&lt;/p&gt;&lt;br /&gt;<br />
+&lt;/div&gt;&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+&lt;!-- CARD 1 --&gt;&lt;br /&gt;<br />
+  &lt;div class=&quot;row&quot;&gt;&lt;br /&gt;<br />
+    &lt;div class=&quot;col s12 &quot;&gt; &lt;br /&gt;<br />
+	&lt;!-- /ad m5 for small/ --&gt;&lt;br /&gt;<br />
+      &lt;div class=&quot;card-panel teal&quot;&gt;&lt;br /&gt;<br />
+        &lt;span class=&quot;white-text&quot;&gt;&lt;br /&gt;<br />
+			NEON TECH is a youtube startup giving you knowledge from simple how to's to advanced coding&lt;br /&gt;<br />
+			firing bullets in game to making mansions in minecraft&lt;br /&gt;<br />
+        &lt;/span&gt;&lt;br /&gt;<br />
+      &lt;/div&gt;&lt;br /&gt;<br />
+    &lt;/div&gt;&lt;br /&gt;<br />
+  &lt;/div&gt;&lt;br /&gt;<br />
+ &lt;br /&gt;<br />
+&lt;br /&gt;<br />
+&lt;br /&gt;<br />
+  &lt;br /&gt;<br />
+  &lt;!--  Scripts--&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;js/main.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;https://code.jquery.com/jquery-2.1.1.min.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;js/materialize.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;js/init.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;script src=&quot;js/main.js&quot;&gt;&lt;/script&gt;&lt;br /&gt;<br />
+  &lt;/body&gt;&lt;br /&gt;<br />
+&lt;/html&gt;&lt;br /&gt;<br />
+
 &lt;/div>
 </pre>
 </code-block>
 
-<code-block class="language-javascript line-numbers" data-line="2">
-<pre>
-const name = "Chris Coyier";
-console.log(name);
-</pre>
+
 </code-block>
 
 
