--- a/study/physics/index.html
+++ b/study/physics/index.html
@@ -6,4 +6,4 @@
 </a>
 <script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=543970"></script>
 </body>
-<html>
+</html>
