--- a/study/physics/index.html
+++ b/study/physics/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+</head>
 <body>
 <a href="https://online.flippingbook.com/view/543970/" class="fbo-embed" data-fbo-id="543970" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="100%" data-fbo-version="1" style="max-width: 100%;">
     IMAGE FORMATION BY CONCAVE MIRROR
