--- a/study/index.html
+++ b/study/index.html
@@ -52,7 +52,7 @@
         <div>
             <ul role="list">
                 <li class="list-item">
-                    <a href="/physics" target="_blank">
+                    <a href="study/physics" target="_blank">
                         <strong>PHYSICS</strong>
                     </a>
                 </li>
