--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@ div.sk-chase {
       <a href="#name"><span class="white-text name">Akshit Shubham</span></a>
       <a href="#email"><span class="white-text email">neontechrealak@gmail.com</span></a>
     </div></li>
-    <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-    <li><a href="#!">Second Link</a></li>
+    
+    <li><a href="CODES">CODES OF MY HOMEPAGE</a></li>
     <li><div class="divider"></div></li>
     <li><a class="subheader">Subheader</a></li>
-    <li><a class="waves-effect" href="main2.html">Third Link With Waves</a></li>
+    <li><a class="waves-effect" href="study">STUDY</a></li>
   </ul>
   <a href="#" data-target="slide-out" class="sidenav-trigger">
  
@@ -170,7 +170,7 @@ div.sk-chase {
 
 <!-- LOREM IPSUM -->
  <div class="center2" style="text-align:center;">
- <p >Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+ <p >FOR ANDROID SWIPE FROM LEFT CENTRE AND FOR OTHERS CLICK ON MENU OPTION</p>
 <p>Aenean commodo ligula eget dolor.</p>
 <p>Aenean massa.</p>
 <p>Integer tincidunt.</p>
