--- a/index.html
+++ b/index.html
@@ -135,12 +135,11 @@ div.sk-chase {
       </div>
       <a href="#user"><img class="circle" src="background3.jpg"></a>
       <a href="#name"><span class="white-text name">Akshit Shubham</span></a>
-      <a href="#email"><span class="white-text email">neontechrealak@gmail.com</span></a>
+      <a href="mailto:neontechrealak@gmail.com"><span class="white-text email">neontechrealak@gmail.com</span></a>
     </div></li>
     
     <li><a href="CODES">CODES OF MY HOMEPAGE</a></li>
     <li><div class="divider"></div></li>
-    <li><a class="subheader">Subheader</a></li>
     <li><a class="waves-effect" href="study">STUDY</a></li>
   </ul>
   <a href="#" data-target="slide-out" class="sidenav-trigger">
