--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <meta name="theme-color" content="#ffffff">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="google-signin-scope" content="profile email">
+  <meta name="google-signin-client_id" content="923045266998-srk1b9t2hm2j647cuih04gmp5oe05e67.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <title>Neon Tech Official</title>
 
   <!-- CSS  -->
@@ -137,7 +140,7 @@ div.sk-chase {
       <a href="#name"><span class="white-text name">Akshit Shubham</span></a>
       <a href="mailto:neontechrealak@gmail.com"><span class="white-text email">neontechrealak@gmail.com</span></a>
     </div></li>
-    
+    <li><div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div></li>
     <li><a href="CODES">CODES OF MY HOMEPAGE</a></li>
     <li><div class="divider"></div></li>
     <li><a class="waves-effect" href="study">STUDY</a></li>
