--- a/index.html
+++ b/index.html
@@ -114,6 +114,27 @@ div.sk-chase {
 </style>
 </head>
 <body class="teal lighten-5 ;">	
+	<!--google account-->
+	 <script>
+      function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+	      var email = profile.getEmail();
+	      var pic = profile.getImageUrl();
+	      document.getElementsByClassName("circle").src = pic;
+        document.getElementsByClassName("white-text email").value = email;
+
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+      }
+    </script>
 <!-- loading -->
 <div class="sk-chase">
   <div class="sk-chase-dot"></div>
