--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ div.sk-chase {
       </div>
       <a href="#user"><img class="circle" src="background3.jpg" id="circle"></a>
       <a href="#name"><span class="white-text name">Akshit Shubham</span></a>
-      <a href="mailto:neontechrealak@gmail.com"><span class="white-text email" id ="white-text email">neontechrealak@gmail.com</span></a>
+      <a href="mailto:neontechrealak@gmail.com"><span class="white-text email" id ="white-text email"></span></a>
     </div></li>
     <li><div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div></li>
     <li><a href="CODES">CODES OF MY HOMEPAGE</a></li>
