--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ div.sk-chase {
 	      var pic = profile.getImageUrl();
 	      document.getElementById("circle").src = pic;
         document.getElementById("white-text email").value = email;
+	      document.getElementById("g-signin2").disabled = true;
 
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
@@ -161,7 +162,7 @@ div.sk-chase {
       <a href="#name"><span class="white-text name">Akshit Shubham</span></a>
       <a href="mailto:neontechrealak@gmail.com"><span class="white-text email" id ="white-text email"></span></a>
     </div></li>
-    <li><div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div></li>
+    <li><div class="g-signin2" id="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div></li>
     <li><a href="CODES">CODES OF MY HOMEPAGE</a></li>
     <li><div class="divider"></div></li>
     <li><a class="waves-effect" href="study">STUDY</a></li>
