--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ div.sk-chase {
 	      var pic = profile.getImageUrl();
 	      document.getElementById("circle").src = pic;
         document.getElementById("white-text email").value = email;
-	      document.getElementById("g-signin2")[0].setAttribute("onclick", "signOut()");;
+	      
 	      
 
         // The ID token you need to pass to your backend:
@@ -167,6 +167,7 @@ div.sk-chase {
     <li><a href="CODES">CODES OF MY HOMEPAGE</a></li>
     <li><div class="divider"></div></li>
     <li><a class="waves-effect" href="study">STUDY</a></li>
+	  <li><a href="#" onclick="signOut();">Sign out</a></li>
   </ul>
   <a href="#" data-target="slide-out" class="sidenav-trigger">
 	  <script>
