--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ div.sk-chase {
 	      var email = profile.getEmail();
 	      var pic = profile.getImageUrl();
 	      document.getElementById("circle").src = pic;
-        document.getElementById("white-text email").value = email;
+        document.getElementById("am").value = email;
 	      
 	      
 
@@ -160,7 +160,7 @@ div.sk-chase {
         <img src="background2.jpg">
       </div>
       <a href="#user"><img class="circle" src="background3.jpg" id="circle"></a>
-      <a href="#name"><span class="white-text name">Akshit Shubham</span></a>
+      <a href="#name"><span class="white-text name"><button I'd ="am"></button></span></a>
       <a href="mailto:neontechrealak@gmail.com"><span class="white-text email" id ="white-text email"></span></a>
     </div></li>
     <li><div class="g-signin2" id="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div></li>
