--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ cursor: url(""), url("cursors/Hand.cur"), default;
       }
     </script>
 <!-- loading -->
-<div id="load">
+<div id="load" class="load">
   <div>G</div>
   <div>N</div>
   <div>I</div>
