--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ a{
 cursor: url(""), url("cursors/Hand.cur"), default;
 }
 	 .water{
-            width:400px;
-            height: 400px;
-            background-color: skyblue;
+            width:100%;
+            height: 100%;
+           
             border-radius: 50%;
             position: relative;
             box-shadow: inset 0 0 30px 0 rgba(0,0,0,.5), 0 4px 10px 0 rgba(0,0,0,.5);
