--- a/index.html
+++ b/index.html
@@ -43,41 +43,99 @@ body{
 a{
 cursor: url(""), url("cursors/Hand.cur"), default;
 }
-	 .water{
-            width:100%;
-            height: 100%;
-           
-            border-radius: 50%;
-            position: relative;
-            box-shadow: inset 0 0 30px 0 rgba(0,0,0,.5), 0 4px 10px 0 rgba(0,0,0,.5);
-            overflow: hidden;
-        }
-        .water:before, .water:after{
-            content:'';
-            position: absolute;
-            width:400px;
-            height: 400px;
-            top:-150px;
-            background-color: #fff;
-        }
-        .water:before{
-            border-radius: 45%;
-            background:rgba(255,255,255,.7);
-            animation:wave 5s linear infinite;
-        }
-        .water:after{
-            border-radius: 35%;
-            background:rgba(255,255,255,.3);
-            animation:wave 5s linear infinite;
-        }
-        @keyframes wave{
-            0%{
-                transform: rotate(0);
-            }
-            100%{
-                transform: rotate(360deg);
-            }
-        }
+
+@keyframes bgg {
+  0% { background: rgba(0, 153, 255, 1); }
+  50% { background: rgba(41, 255, 121, 1); }
+  100% { background: rgba(255, 74, 88, 1); }
+}
+.loader {
+  position: absolute;
+	animation: bgg 16087ms ease-in alternate infinite;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 50px;
+  height: 50px;
+  margin: auto;
+}
+.loader .circle {
+  position: absolute;
+  width: 38px;
+  height: 38px;
+  opacity: 0;
+  transform: rotate(225deg);
+  animation-iteration-count: infinite;
+  animation-name: orbit;
+  animation-duration: 5.5s;
+}
+.loader .circle:after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0 0 9px rgba(255, 255, 255, .7);
+}
+.loader .circle:nth-child(2) {
+  animation-delay: 240ms;
+}
+.loader .circle:nth-child(3) {
+  animation-delay: 480ms;
+}
+.loader .circle:nth-child(4) {
+  animation-delay: 720ms;
+}
+.loader .circle:nth-child(5) {
+  animation-delay: 960ms;
+}
+.loader .bg {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  margin-left: -16px;
+  margin-top: -16px;
+  border-radius: 13px;
+  background-color: rgba(0, 153, 255, 0.69);
+  animation: bgg 16087ms ease-in alternate infinite;
+}
+@keyframes orbit {
+  0% {
+    transform: rotate(225deg);
+    opacity: 1;
+    animation-timing-function: ease-out;
+  }
+  7% {
+    transform: rotate(345deg);
+    animation-timing-function: linear;
+  }
+  30% {
+    transform: rotate(455deg);
+    animation-timing-function: ease-in-out;
+  }
+  39% {
+    transform: rotate(690deg);
+    animation-timing-function: linear;
+  }
+  70% {
+    transform: rotate(815deg);
+    opacity: 1;
+    animation-timing-function: ease-out;
+  }
+  75% {
+    transform: rotate(945deg);
+    animation-timing-function: ease-out;
+  }
+  76% {
+    transform: rotate(945deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(945deg);
+    opacity: 0;
+  }
+}
 
 </style>
 </head>
@@ -106,12 +164,19 @@ cursor: url(""), url("cursors/Hand.cur"), default;
       }
     </script>
 <!-- loading -->
-<div class="water"></div>
+<div class='loader'>
+  <div class="bg"></div>
+  <div class='circle'></div>
+  <div class='circle'></div>
+  <div class='circle'></div>
+  <div class='circle'></div>
+  <div class='circle'></div>
+</div>
 	
 	<!-- loading script -->
 <script>
         $(window).on("load",function(){
-          $(".water").fadeOut("slow");
+          $(".loader").fadeOut("slow");
         });
     </script>
 <!-- SIDE MENU -->
