--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ cursor: url(""), url("cursors/Hand.cur"), default;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   margin: auto;
 }
 .loader .circle {
