--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@ cursor: url(""), url("cursors/Hand.cur"), default;
   margin: auto;
 }
 .loader .circle {
-  position: absolute;
+  position: ;
   width: 38px;
   height: 38px;
   opacity: 0;
+	left: 50%;
+    margin-right: -50%;
   transform: rotate(225deg);
   animation-iteration-count: infinite;
   animation-name: orbit;
