--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@ cursor: url(""), url("cursors/Hand.cur"), default;
   100% { background: rgba(255, 74, 88, 1); }
 }
 .loader {
+	 animation: bgg 16087ms ease-in 
   position: absolute;
-	animation: bgg 16087ms ease-in alternate infinite;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  width: 20%;
-  height: 20%;
+  width: 50px;
+  height: 50px;
   margin: auto;
 }
 .loader .circle {
-  position: ;
+  position: absolute;
   width: 38px;
   height: 38px;
   opacity: 0;
