--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@ cursor: url(""), url("cursors/Hand.cur"), default;
 <!-- SIDE MENU -->
   <ul id="slide-out" class="sidenav">
     <li><div class="user-view">
-      <div class="background">
-        <img src="background2.jpg">
+      <div class="images/background">
+        <img src="images/background2.jpg">
       </div>
-      <a href="#user"><img class="circle" src="background3.jpg" id="circle"></a>
+      <a href="#user"><img class="circle" src="images/background3.jpg" id="circle"></a>
       <a href="#name"><button id ="am"></button></a>
       <a href="mailto:neontechrealak@gmail.com"><span class="white-text email" id ="white-text email"></span></a>
     </div></li>
@@ -224,7 +224,7 @@ cursor: url(""), url("cursors/Hand.cur"), default;
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="images/background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 <!-- LOREM IPSUM -->
