--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ cursor: url(""), url("cursors/Hand.cur"), default;
     <li><a class="waves-effect" href="study">STUDY</a></li>
 	  <li><a href="#" onclick="signOut();">Sign out</a></li>
   </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger">
+  <a data-target="slide-out" class="sidenav-trigger">
 	  <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
