--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ cursor: url(""), url("cursors/Hand.cur"), default;
     <li><a href="CODES">CODES OF MY HOMEPAGE</a></li>
     <li><div class="divider"></div></li>
     <li><a class="waves-effect" href="study">STUDY</a></li>
-	  <li><a href="#" onclick="signOut();">Sign out</a></li>
+	  <li><a  onclick="signOut();" href="#">Sign out</a></li>
   </ul>
   <a data-target="slide-out" class="sidenav-trigger">
 	  <script>
