--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@ cursor: url(""), url("cursors/Hand.cur"), default;
           $(".loader").fadeOut("slow");
         });
     </script>
-<!-- SIDE MENU -->
+<!-- 
+SIDE MENU 
   <ul id="slide-out" class="sidenav">
       <a href="#user"><img class="circle" src="images/background3.jpg" id="circle"></a>
       <a href="mailto:neontechrealak@gmail.com"><span class="white-text email" id ="white-text email"></span></a>
@@ -198,7 +199,7 @@ cursor: url(""), url("cursors/Hand.cur"), default;
     });
   }
 </script>
- 
+ -->
 <!-- parallax -->
   <div id="index-banner" class="parallax-container" >
   <!-- side menu button-->
