--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-  <script src="https://tympanus.net/Tutorials/SwatchBook/js/modernizr.custom.79639.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <link href="css/material-components-web.min.css" rel="stylesheet">
+  <script src="js/material-components-web.min.js"></script>
+  <script src="js/modernizr.custom.79639.js"></script>
+  <script src="js/jquery/jquery.js"></script>
   <link href="css/" rel="stylesheet">
   <!-- STYLE -->
 <style>
@@ -151,9 +150,8 @@ cursor: url(""), url("cursors/Hand.cur"), default;
           $(".loader").fadeOut("slow");
         });
     </script>
- <nav> <!-- navbar content here  --> </nav>
-
- <ul id="slide-out" class="sidenav">
+<!-- SIDENAV -->
+<ul id="slide-out" class="sidenav">
    <li><div class="user-view">
      <div class="background">
        <img src="images/office.jpg">
@@ -164,11 +162,11 @@ cursor: url(""), url("cursors/Hand.cur"), default;
    <li><a class="waves-effect" href="/Study/">Third Link With Waves</a></li>
    <li><a class="waves-effect" href="https://materializecss.com/">https://materializecss.com/</a></li>
  </ul>
- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+ <a href="#" data-target="slide-out" class="sidenav-trigger">
 <!-- parallax -->
   <div id="index-banner" class="parallax-container" >
   <!-- side menu button-->
-  <i class="material-icons" id="menu">menu</i></a>
+  <i class="material-icons">menu</i></a>
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
