--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ cursor: url(""), url("cursors/Hand.cur"), default;
    </div>
   </li>
    <li><a class="waves-effect" href="/CODES/">Codes of my Homepage</a></li>
-   <li><a class="waves-effect" href="/Study/">Third Link With Waves</a></li>
+   <li><a class="waves-effect" href="/study/">Third Link With Waves</a></li>
    <li><a class="waves-effect" href="https://materializecss.com/">https://materializecss.com/</a></li>
  </ul>
  <a href="#" data-target="slide-out" class="sidenav-trigger">
