--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@ cursor: url(""), url("cursors/Hand.cur"), default;
    </div>
   </li>
    <li><a class="waves-effect" href="/CODES/">Codes of my Homepage</a></li>
-   <li><a class="waves-effect" href="/study/">Third Link With Waves</a></li>
+   <li><a class="waves-effect" href="/study/">Study Material</a></li>
    <li><a class="waves-effect" href="https://materializecss.com/">https://materializecss.com/</a></li>
  </ul>
  <a href="#" data-target="slide-out" class="sidenav-trigger">
 <!-- parallax -->
   <div id="index-banner" class="parallax-container" >
   <!-- side menu button-->
-  <i class="material-icons">menu</i></a>
+  <i class="material-icons large">menu</i></a>
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
