--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ cursor: url(""), url("cursors/Hand.cur"), default;
 <!-- parallax -->
   <div id="index-banner" class="parallax-container" >
   <!-- side menu button-->
-  <i class="material-icons small">menu</i></a>
+  <i class="material-icons medium">menu</i></a>
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
