--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <script>
+  </script>
   <title>Neon Tech Official</title>
 
   <!-- CSS  -->
@@ -29,6 +31,7 @@
   <script src="js/material-components-web.min.js"></script>
   <script src="js/modernizr.custom.79639.js"></script>
   <script src="js/jquery/jquery.js"></script>
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="css/" rel="stylesheet">
   <!-- STYLE -->
 <style>
@@ -244,10 +247,40 @@ cursor: url(""), url("cursors/Hand.cur"), default;
 #radio4:checked ~ .navigation-auto .auto-btn4{
   background: #40D3DC;
 }
-      
+/* conext menu css */
+#context-menu {
+  position:fixed;
+  z-index:10000;
+  width:150px;
+  background:#1b1a1a;
+  border-radius:5px;
+  transform:scale(0);
+  transform-origin:top left;
+}
+#context-menu.active {
+  transform:scale(1);
+  transition:transform 300ms ease-in-out;
+}
+#context-menu .item {
+  padding:8px 10px;
+  font-size:15px;
+  color:#eee;
+}
+#context-menu .item:hover {
+  background:#555;
+}
+#context-menu .item i {
+  display:inline-block;
+  margin-right:5px;
+}
+#context-menu hr {
+  margin:2px 0px;
+  border-color:#555;
+}
 </style>
 </head>
 <body class="teal lighten-5 ;">	
+  
 <!-- loading -->
 <div class='loader'>
   <div class="bg"></div>
@@ -263,7 +296,30 @@ cursor: url(""), url("cursors/Hand.cur"), default;
         $(window).on("load",function(){
           $(".loader").fadeOut("slow");
         });
+        
     </script>
+    <!-- RIGHT MENU -->
+    <div id="context-menu">
+      <div class="item">
+        <i class="fa fa-cut"></i> Cut
+      </div>
+      <div class="item">
+        <i class="fa fa-clone" ></i> Copy
+      </div>
+      <div class="item" onclick="copy()">
+        <i class="fa fa-paste"></i> Paste
+      </div>
+      <div class="item">
+        <i class="fa fa-trash-o"></i> Delete
+      </div>
+      <hr>
+      <div class="item">
+        <i class="fa fa-refresh"></i> <a href="javascript:location.reload(true)">Refresh Page</a>
+      </div>
+      <div class="item">
+        <i class="fa fa-times"></i> Exit
+      </div>
+    </div>
 <!-- SIDENAV -->
 <ul id="slide-out" class="sidenav">
    <li><div class="user-view">
@@ -376,8 +432,21 @@ setInterval(function(){
       clickEvent.preventDefault(); 
       // return false; 
   } 
-</script>     
- 
+</script>
+<!-- context menu js      -->
+ <script>
+   window.addEventListener("contextmenu",function(event){
+  event.preventDefault();
+  var contextElement = document.getElementById("context-menu");
+  contextElement.style.top = event.offsetY + "px";
+  contextElement.style.left = event.offsetX + "px";
+  contextElement.classList.add("active");
+});
+window.addEventListener("click",function(){
+  document.getElementById("context-menu").classList.remove("active");
+});
+
+ </script>
   <!--  Scripts-->
   <script src="js/main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
