--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ window.addEventListener("click",function(){
  </script>
   <!--  Scripts-->
   <script src="js/main.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/aos.js"></script>
