--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link rel="stylesheet" href="css/aos.css" />
@@ -450,6 +451,7 @@ window.addEventListener("click",function(){
  </script>
   <!--  Scripts-->
   <script src="js/main.js"></script>
+  <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/aos.js"></script>
