--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <script>
-  </script>
+
   <title>Neon Tech Official</title>
 
   <!-- CSS  -->
@@ -322,6 +321,21 @@ cursor: url(""), url("cursors/Hand.cur"), default;
         <i class="fa fa-times"></i> Exit
       </div>
     </div>
+    <!-- ska -->
+    <header class="mdc-top-app-bar mdc-top-app-bar--short">
+      <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+          <a href="#" data-target="slide-out" class="sidenav-trigger"><button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
+          </a><span class="mdc-top-app-bar__title">Title</span>
+        </section>
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+          <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Bookmark this page">bookmark</button>
+        </section>
+      </div>
+    </header>
+    <main class="mdc-top-app-bar--short-fixed-adjust">
+      App content
+    </main>
 <!-- SIDENAV -->
 <ul id="slide-out" class="sidenav">
    <li><div class="user-view">
@@ -334,11 +348,11 @@ cursor: url(""), url("cursors/Hand.cur"), default;
    <li><a class="waves-effect" href="/study/">Study Material</a></li>
    <li><a class="waves-effect" href="https://materializecss.com/">https://materializecss.com/</a></li>
  </ul>
- <a href="#" data-target="slide-out" class="sidenav-trigger">
+
 <!-- parallax -->
   <div id="index-banner" class="parallax-container" >
   <!-- side menu button-->
-  <i class="material-icons medium">menu</i></a>
+
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
@@ -451,7 +465,6 @@ window.addEventListener("click",function(){
  </script>
   <!--  Scripts-->
   <script src="js/main.js"></script>
-  <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/aos.js"></script>
