--- a/index.html
+++ b/index.html
@@ -312,7 +312,32 @@ window.addEventListener("click",function(){
 });
 
  </script>
- 
+   <footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Thank you!</h5>
+          <p class="grey-text text-lighten-4">Wath us on youtube<br>
+            <a href="https://www.youtube.com/channel/UCXuphyYb0y6ZMZaIEEMif4w" class="grey-text text-lighten-3" target="_blank">HERE</a></p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="/CODES/">CODES</a></li>
+            <li><a class="grey-text text-lighten-3" href="/study/">Study</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/AKSHIT-SHUBHAM/Neon-Tech/tree/main">View on Github</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://materializecss.com/">Materialize css</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      © 2021 Neon-Tech
+      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>
+    </div>
+  </footer>
 
   <!--  Scripts-->
   <script src="js/main.js"></script>
